@@ -68,7 +68,7 @@ Bug Fixes
 
 * SOLR-17198: AffinityPlacementFactory can fail if Shard leadership changes occur while it is collecting metrics.
   (Paul McArthur)
-  
+
 * SOLR-17018: Add QueryLimits support to Learning To Rank rescoring.
     (Alessandro Benedetti)
 
@@ -84,6 +84,9 @@ Bug Fixes
 * SOLR-17200: Fix false positive race condition in `/health?requireHealthyCores=true` during core loading (hossman)
 
 * SOLR-17218: Fix indexFetcher logging to include MDC details (hossman)
+
+* SOLR-17206: Eliminate the possibility of a -1 status code for SolrCloud update requests that are distributed.
+  (Paul McArthur)
 
 Dependency Upgrades
 ---------------------
